# project

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  genindex.html  index.html  pyproject.toml  requirements.html  search.html  searchindex.js
backend/: Dockerfile  example.env  manage.py  pyproject.toml  pytest.ini
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/urls/: api.py  main.py  v1.py
backend/desire/: asgi.py  settings.py  urls.py  wsgi.py
backend/docs/: conf.py
backend/docs/_build/doctrees/: environment.pickle  index.doctree  requirements.doctree
backend/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  requirements.html  search.html
backend/pozabanka/: pytest.ini  urls.py
backend/pozabanka/authentication/api/: views.py
backend/pozabanka/templates/: base.html
backend/pozabanka/templates/users/: email_template.html  login.html  password_change.html  password_reset.html  password_reset_complete.html
django/: .dockerignore  Dockerfile  manage.py  pyproject.toml
django/pozabanka/: asgi.py  pytest.ini  settings.py  urls.py  views.py  wsgi.py
django/pozabanka/articles/: admin.py  apps.py  models.py
django/pozabanka/articles/migrations/: 0001_initial.py
django/pozabanka/authentication/api/: urls.py
django/pozabanka/stories/: admin.py  apps.py  models.py
django/pozabanka/stories/migrations/: 0001_initial.py
django/pozabanka/templates/users/: password_change_done.html  password_reset_done.html
django/pozabanka/users/: apps.py
documentation/: conf.py  (+2 more)
(+42 files in other folders)
