[tool.poetry]
name = "Digital-desire"
version = "0.1.0"
description = ""
authors = ["Digital-desire"]

[tool.poetry.dependencies]
python = "3.8.10"
django = "3.*"
djangorestframework = "3.*"
black = "*"
django-utils-six = "*"
python-decouple = "*"
pytest-django = "*"
pytest-cov = "*"

[tool.poetry.dev-dependencies]